src/main/metadata-au/objects/Complaint_Tracking__c.object
<CustomObject>
    <description>Complaint: Tracking Complaint fields history.</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Complaint Tracking</relationshipLabel>
        <relationshipName>Complaint_Tracking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaint_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Complaint Tracking</label>
    <nameField>
        <displayFormat>CASEH-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>